# agent-matchmaking-protocol

./: .gitignore  README.md  matchmaker-api-whitepaper-short.md
.github/workflows/: ci.yml
docs/: ACTION_PLAN.md
go/: README.md  auth.go  client.go  client_test.go  conformance_fixtures_test.go  errors.go  go.mod  models.go
java/: README.md  pom.xml
java/src/main/java/com/bonsai/amp/sdk/: AmpClient.java  AuthSigner.java  HttpStatusException.java  MissingCredentialsException.java  NetworkException.java  RequestOptions.java
java/src/main/java/com/bonsai/amp/sdk/model/: ApprovalDecisionResponse.java  ApprovalStatus.java  ApproveNegotiationRequest.java  CreateNegotiationRequest.java  CreateProfileRequest.java  CreateProfileResponse.java  (+8 more)
java/src/test/java/com/bonsai/amp/sdk/: AmpClientTest.java  AuthSignerTest.java  ConformanceFixturesTest.java
python/: README.md  pyproject.toml
python/amp_sdk/: __init__.py  auth.py  client.py  errors.py  models.py
python/tests/: test_client.py  test_conformance_fixtures.py
rust/amp-sdk/: Cargo.toml  README.md
rust/amp-sdk/src/: auth.rs  client.rs  error.rs  lib.rs  models.rs  state_machine.rs
rust/amp-sdk/tests/: conformance_fixtures.rs
scripts/: check_openapi_drift.py
skills/amp-openclaw/: README.md  SKILL.md  amp.py
spec/: architecture.md  openapi.yaml  stateMachine.reference.ts  whitepaper.md
spec/fixtures/: README.md
spec/fixtures/http/: approval_status_response.json  create_negotiation_request.json  create_profile_request.json  create_profile_response.json  discovery_response.json  register_agent_request.json  register_agent_response.json
spec/fixtures/state/: transition_cases.json
