[package]
name = "amp-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for AMP/1.0 (Agent Matchmaking Protocol)"
license = "UNLICENSED"
repository = "https://github.com/bons-ai/agent-matchmaking-protocol"
readme = "README.md"
keywords = ["amp", "sdk", "dating", "client", "protocol"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
url = "2"
oauth2 = { version = "5", default-features = false, features = ["reqwest"] }
async-trait = "0.1"

[dev-dependencies]
httpmock = "0.7"

[features]
default = []
